update: blog base ui

--- a/content/blog/test.mdx
+++ b/content/blog/test.mdx
@@ -16,3 +16,29 @@ console.log('Hello World');
   <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
   <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
 </Cards>
+
+### Code Block 1
+
+```js
+console.log('Hello World');
+```
+
+#### Cards 1
+
+<Cards>
+  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
+  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
+</Cards>
+
+### Code Block 2
+
+```js
+console.log('Hello World');
+```
+
+#### Cards 2
+
+<Cards>
+  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
+  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
+</Cards>
