feat: /blog/git-clone-with-ssh

--- a/content/blog/deploying-node-server-in-aws-ec2.mdx
+++ b/content/blog/deploying-node-server-in-aws-ec2.mdx
@@ -4,8 +4,6 @@ description: Step-by-step guide to deploy a Node.js server on AWS EC2 from scrat
 date: 2025-12-23
 ---
 
-import { Step, Steps } from 'fumadocs-ui/components/steps'
-
 ## Introduction
 
 Deploying a Node.js application to production can feel overwhelming if you're doing it for the first time. In this guide, we'll deploy a **production-ready Node.js server** on an **AWS EC2 instance** using:
@@ -136,6 +134,8 @@ cd app
 ```
 
 > This setup is for public git repository.
+
+Check out [Private repo cloning with ssh](/blog/git-clone-with-ssh)
 
 </Step>
 
